Updated print styles for GW. Added print color adjust to show header in print.

--- a/source/themes/custom/crescenttool_au/styles/libraries/node/full--product-print.scss
+++ b/source/themes/custom/crescenttool_au/styles/libraries/node/full--product-print.scss
@@ -46,6 +46,8 @@
 
   .region-header {
     position: unset !important;
+    print-color-adjust: exact; // sass-lint:disable-line no-misspelled-properties
+    -webkit-print-color-adjust: exact; // sass-lint:disable-line no-misspelled-properties
   }
 
   #specifications,
@@ -76,7 +78,7 @@
 
     .swiper-slide {
       &:not(.swiper-slide-active) {
-        img {
+        .media {
           display: none !important;
         }
       }
