feature/VYRKCATG-38: Added the download images button.

--- a/docroot/themes/custom/crescenttool/templates/node/node--product--full.html.twig
+++ b/docroot/themes/custom/crescenttool/templates/node/node--product--full.html.twig
@@ -112,6 +112,10 @@
                 class="product-detail-slider__button product-detail-slider__button-next swiper-button-next"></button>
             </div>
           {% endif %}
+
+          <span class="download-images-link">
+            <a href="/product-image-download/{{ node.id() }}" class="component-content__link button">{{ 'Download Images'|t }}</a>
+          </span>
         </div>
       {% endif %}
 
