--- a/docroot/themes/custom/gearwrench/templates/node/node--product--full.html.twig
+++ b/docroot/themes/custom/gearwrench/templates/node/node--product--full.html.twig
@@ -112,6 +112,10 @@
                 class="product-detail-slider__button product-detail-slider__button-next swiper-button-next"></button>
             </div>
           {% endif %}
+
+          <span class="download-images-link">
+            <a href="/product-image-download/{{ node.id() }}" class="component-content__link button">{{ 'Download Images'|t }}</a>
+          </span>
         </div>
       {% endif %}
 
@@ -134,7 +138,7 @@
 
         {{ page_top_products_features }}
 
-        <span class="more-features-link"><a href="#features">See More Features</a> </span>
+        <span class="more-features-link"><a href="#features">See More Features</a></span>
       </div>
     </div>
 
