--- a/source/themes/custom/crescenttool/styles/libraries/node/full--product.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/node/full--product.scss
@@ -541,4 +541,10 @@ $tabs-border-width-active: rem(5px);
       }
     }
   }
+
+  .download-images-link {
+    display: block;
+    margin: 2rem auto 0;
+    text-align: center;
+  }
 }
