--- a/source/themes/custom/gearwrench_au/styles/libraries/node/full--product.scss
+++ b/source/themes/custom/gearwrench_au/styles/libraries/node/full--product.scss
@@ -547,6 +547,12 @@ $tabs-border-width-active: rem(5px);
       }
     }
   }
+
+  .download-images-link {
+    display: block;
+    margin: 2rem auto 0;
+    text-align: center;
+  }
 }
 
 .page-node-type-product {
