VYRKCATG-125: Added a hover indicator for the print button so that it is clear it is clickable.

--- a/source/themes/custom/crescenttool_au/styles/libraries/node/full--product.scss
+++ b/source/themes/custom/crescenttool_au/styles/libraries/node/full--product.scss
@@ -555,6 +555,10 @@ $tabs-border-width-active: rem(5px);
     margin: 2rem auto 0;
     text-align: center;
   }
+
+  .product-detail-content-container__print > span {
+    cursor: pointer;
+  }
 }
 
 .page-node-type-product {
