--- a/source/themes/custom/gearwrench_au/styles/libraries/node/full--product.scss
+++ b/source/themes/custom/gearwrench_au/styles/libraries/node/full--product.scss
@@ -553,6 +553,10 @@ $tabs-border-width-active: rem(5px);
     margin: 2rem auto 0;
     text-align: center;
   }
+
+  .product-detail-content-container__print > span {
+    cursor: pointer;
+  }
 }
 
 .page-node-type-product {
