--- a/source/themes/custom/crescenttool_au/styles/libraries/node/full--product.scss
+++ b/source/themes/custom/crescenttool_au/styles/libraries/node/full--product.scss
@@ -575,8 +575,8 @@ $tabs-border-width-active: rem(5px);
     }
 
     .modal {
-      max-width: rem(925px);
-      max-height: rem(625px);
+      max-width: rem(926px);
+      max-height: rem(622px);
       padding: 20px;
       border-radius: unset;
       width: 100%;
@@ -588,7 +588,7 @@ $tabs-border-width-active: rem(5px);
       }
 
       @include media('>=md') {
-        padding: 40px;
+        padding: 32px;
 
         .media__image {
           max-height: 545px;
@@ -619,6 +619,11 @@ $tabs-border-width-active: rem(5px);
       @include media('>=md') {
         font-size: rem(35px);
         padding-left: rem(8px);
+      }
+
+      svg {
+        height: 23px;
+        width: 23px;
       }
     }
 
