--- a/source/themes/custom/sata/styles/libraries/node/full--product.scss
+++ b/source/themes/custom/sata/styles/libraries/node/full--product.scss
@@ -47,7 +47,7 @@ $tabs-border-width-active: rem(5px);
           @include media('<=md') {
             background: none;
             border: 0;
-            color: $primary-orange;
+            color: $primary-emerald;
             display: block;
             position: absolute;
             top: calc(50% - .5rem);
@@ -90,7 +90,7 @@ $tabs-border-width-active: rem(5px);
         }
 
         .swiper-slide-thumb-active {
-          outline: 2px solid $primary-orange;
+          outline: 2px solid $primary-emerald;
           outline-offset: -2px;
         }
       }
@@ -103,7 +103,7 @@ $tabs-border-width-active: rem(5px);
         @include media('>md') {
           display: block;
           background: none;
-          background-color: $primary-orange;
+          background-color: $primary-emerald;
           margin: 0;
           padding: 0;
           top: 0;
@@ -218,7 +218,7 @@ $tabs-border-width-active: rem(5px);
         @include container-full-width();
         @include flex();
         @include flex-x(flex-direction, row);
-        background-color: $primary-orange;
+        background-color: $primary-emerald;
         height: $header-height;
 
         @include media('<=md') {
@@ -515,7 +515,7 @@ $tabs-border-width-active: rem(5px);
       }
 
       @include media('>lg-plus') {
-        background-color: $primary-orange;
+        background-color: $primary-emerald;
         max-width: rem(455px);
         text-align: left;
         position: relative;
@@ -524,7 +524,7 @@ $tabs-border-width-active: rem(5px);
 
         // Performance Device
         &::after {
-          background-color: $primary-orange;
+          background-color: $primary-emerald;
           position: absolute;
           content: '';
           width: 30px;
@@ -538,7 +538,7 @@ $tabs-border-width-active: rem(5px);
 
       h4 {
         text-transform: uppercase;
-        color: $primary-orange;
+        color: $primary-emerald;
 
         @include media('>lg-plus') {
           color: $black;
@@ -652,8 +652,8 @@ $tabs-border-width-active: rem(5px);
       top: unset;
 
       &:hover {
-        background-color: $primary-orange;
-        border-color: $primary-orange;
+        background-color: $primary-emerald;
+        border-color: $primary-emerald;
       }
 
       @include media('>=md') {
