--- a/source/themes/custom/sata/styles/libraries/node/search-index.scss
+++ b/source/themes/custom/sata/styles/libraries/node/search-index.scss
@@ -131,7 +131,7 @@
     outline: 2px solid $black;
 
     .node__read-more-button {
-      color: $primary-orange;
+      color: $primary-emerald;
       background-color: $black;
     }
 
