--- a/source/themes/custom/sata/styles/libraries/node/tile.scss
+++ b/source/themes/custom/sata/styles/libraries/node/tile.scss
@@ -54,7 +54,7 @@
 
       .node__product-category-grid-image,
       .node__grid-title {
-        box-shadow: 0 0 0 2px $primary-orange;
+        box-shadow: 0 0 0 2px $primary-emerald;
         @include media('<md') {
           box-shadow: none;
         }
@@ -62,7 +62,7 @@
 
       .node__grid-title {
         @include icon('chevron-right-black', after, false);
-        background-color: $primary-orange;
+        background-color: $primary-emerald;
         color: $black;
 
         &::after {
