--- a/source/themes/custom/sata/styles/libraries/region/header.scss
+++ b/source/themes/custom/sata/styles/libraries/region/header.scss
@@ -42,7 +42,7 @@ $mobile-menu-item-button-height: 7rem;
 
   @include container-full-width();
 
-  background-color: $primary-orange;
+  background-color: $primary-emerald;
   left: 0;
   max-width: none;
   position: fixed;
@@ -53,7 +53,7 @@ $mobile-menu-item-button-height: 7rem;
   z-index: $header-z-index;
 
   &::after {
-    background-color: $primary-orange;
+    background-color: $primary-emerald;
     content: '';
     display: block;
     height: 1px;
@@ -286,7 +286,7 @@ $mobile-menu-item-button-height: 7rem;
       background-color: $black;
 
       @include media($header-bp-desktop) {
-        background-color: $primary-orange;
+        background-color: $primary-emerald;
       }
     }
 
@@ -343,19 +343,19 @@ $mobile-menu-item-button-height: 7rem;
         width: 100%;
 
         h5 {
-          color: $primary-orange;
+          color: $primary-emerald;
           margin: 0;
           padding: 0;
 
           a {
-            color: $primary-orange;
+            color: $primary-emerald;
           }
         }
       }
 
       li,
       li a {
-        color: $primary-orange;
+        color: $primary-emerald;
       }
 
       .menu-item__link--all {
@@ -507,7 +507,7 @@ $mobile-menu-item-button-height: 7rem;
           @include on-event() {
             text-decoration: underline;
           }
-          color: $primary-orange;
+          color: $primary-emerald;
           font-family: $font-brand;
           font-weight: $fw-bold;
           text-transform: uppercase;
@@ -810,7 +810,7 @@ $mobile-menu-item-button-height: 7rem;
         z-index: 1;
 
         &::before {
-          background-color: $primary-orange;
+          background-color: $primary-emerald;
           position: absolute;
           content: '';
           width: 200vw;
@@ -925,7 +925,7 @@ $mobile-menu-item-button-height: 7rem;
             padding: 0;
 
             a {
-              color: $primary-orange;
+              color: $primary-emerald;
             }
           }
         }
@@ -994,7 +994,7 @@ $mobile-menu-item-button-height: 7rem;
       }
 
       .block__menu {
-        background-color: $primary-orange;
+        background-color: $primary-emerald;
         animation-delay: 300ms;
         animation-duration: 300ms;
         animation-fill-mode: both;
@@ -1077,7 +1077,7 @@ $mobile-menu-item-button-height: 7rem;
               font-size: rem(22px);
 
               a {
-                color: $primary-orange;
+                color: $primary-emerald;
               }
             }
           }
@@ -1090,7 +1090,7 @@ $mobile-menu-item-button-height: 7rem;
             padding-left: rem(20px);
 
             .menu-item__link {
-              color: $primary-orange;
+              color: $primary-emerald;
             }
           }
         }
