--- a/source/themes/custom/sata/styles/libraries/view/social-feed.scss
+++ b/source/themes/custom/sata/styles/libraries/view/social-feed.scss
@@ -84,7 +84,7 @@
       }
 
       @include media('>lg-plus') {
-        background-color: $primary-orange;
+        background-color: $primary-emerald;
         max-width: rem(455px);
         text-align: left;
         position: relative;
@@ -93,7 +93,7 @@
 
         // Performance Device
         &::after {
-          background-color: $primary-orange;
+          background-color: $primary-emerald;
           position: absolute;
           content: '';
           width: 30px;
@@ -107,7 +107,7 @@
 
       h4 {
         text-transform: uppercase;
-        color: $primary-orange;
+        color: $primary-emerald;
 
         @include media('>lg-plus') {
           color: $black;
@@ -127,11 +127,11 @@
 
     .swiper-pagination-bullet {
       background: transparent;
-      border-color: $primary-orange;
+      border-color: $primary-emerald;
     }
 
     .swiper-pagination-bullet-active {
-      background: $primary-orange;
+      background: $primary-emerald;
     }
   }
 
