--- a/source/themes/custom/sata/styles/abstracts/mixins/_links.scss
+++ b/source/themes/custom/sata/styles/abstracts/mixins/_links.scss
@@ -20,7 +20,7 @@
 
 @mixin link-base ($style: dark) {
   $color: $secondary-black;
-  $hover-color: $primary-orange;
+  $hover-color: $primary-emerald;
   $hover-weight: null;
 
   // Light overrides.
