--- a/source/themes/custom/sata/styles/abstracts/variables/_colors.scss
+++ b/source/themes/custom/sata/styles/abstracts/variables/_colors.scss
@@ -13,14 +13,15 @@ $color-black: #000000;
 $color-blue: #0080FF;
 $color-dark-blue: #0055A9;
 
-// Primary - Molten Orange
-$primary-orange: #EB8900;
-$primary-dark: #BB720B;
-$primary-light: #FDBB5E;
+// Primary - Emerald
+$primary-emerald: #006549;
+$primary-dark: #27251F;
+$primary-light: #B1B3B3;
+$primary-solar: #FFB81C;
 
 // Secondary
-$secondary-black: #1D201F;
-$secondary-light: #BCBCBE;
+$secondary-black: #27251F;
+$secondary-light: #B1B3B3;
 
 // Status Colors
 $success-green: #28A745;
@@ -44,12 +45,12 @@ $white: #FFFFFF;
 $black: #000000;
 
 // Typography
-$type-dark: #1D201F;
-$type-light: #D4D8D7;
+$type-dark: #27251F;
+$type-light: #B1B3B3;
 
 
 $colors: (
-  'primary': $primary-orange,
+  'primary': $primary-emerald,
   'primary-dark': $primary-dark,
   'primary-light': $primary-light,
   'secondary-black': $secondary-black,
@@ -74,11 +75,9 @@ $colors: (
 
   'light': $color-white,
   'dark': $color-black,
-  //'white': $white,
   'light-grey': $color-light-grey,
   'grey': $color-grey,
   'dark-grey': $color-dark-grey,
-  //'black': $color-black,
   'blue': $color-blue,
   'dark-blue': $color-dark-blue
 ) !default;
