--- a/source/themes/custom/sata/styles/libraries/view/taxonomy-term.scss
+++ b/source/themes/custom/sata/styles/libraries/view/taxonomy-term.scss
@@ -242,7 +242,7 @@
       }
 
       @include media('>lg-plus') {
-        background-color: $primary-orange;
+        background-color: $primary-emerald;
         max-width: rem(455px);
         text-align: left;
         position: relative;
@@ -251,7 +251,7 @@
 
         // Performance Device
         &::after {
-          background-color: $primary-orange;
+          background-color: $primary-emerald;
           position: absolute;
           content: '';
           width: 30px;
@@ -265,7 +265,7 @@
 
       h4 {
         text-transform: uppercase;
-        color: $primary-orange;
+        color: $primary-emerald;
 
         @include media('>lg-plus') {
           color: $black;
